added swagger specs for gamesCount
